// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Component should render a AppBar Component 1`] = `
<WithStyles(AppBar)
  position="fixed"
>
  <WithStyles(Toolbar)>
    <a
      className="Navbar-textWhite-5"
      href="/"
    >
      <WithStyles(Typography)
        color="inherit"
        variant="h6"
      >
        WIPLean
      </WithStyles(Typography)>
    </a>
  </WithStyles(Toolbar)>
</WithStyles(AppBar)>
`;

exports[`Navbar Component should render its children 1`] = `
<WithStyles(AppBar)
  position="fixed"
>
  <WithStyles(Toolbar)>
    <a
      className="Navbar-textWhite-5"
      href="/"
    >
      <WithStyles(Typography)
        color="inherit"
        variant="h6"
      >
        WIPLean
      </WithStyles(Typography)>
    </a>
    <div>
      Hello
    </div>
  </WithStyles(Toolbar)>
</WithStyles(AppBar)>
`;
